# Nar.SDL

./: nar.json
native/dll/: libNar.SDL.100.dylib  libNar.SDL.dylib
native/dll-src/: BlendMode.c  CMakeLists.txt  MessageBox.c  Pixels.c  Rect.c  Render.c  SDL.c  Video.c  _package.c  _package.h
native/dll-src/include/: Nar.SDL.h
src/: BlendMode.nar  MessageBox.nar  Pixels.nar  Rect.nar  Render.nar  SDL.nar  Surface.nar  Video.nar  Window.nar
